<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.WeatherDataFragment">


    <ImageView
        android:id="@+id/img_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TableLayout
        android:visibility="gone"
        android:id="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_title"
            android:textColor="@color/black"
            android:textSize ="16sp"
            android:layout_marginBottom="8dp">

        </TextView>


        <TableRow android:background="@color/purple_500" android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/ville" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/temperature" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/cloudcover" />
        </TableRow>
        <TableRow android:background="@color/purple_200" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rennes" />
            <TextView
                android:id="@+id/tv_rennes_teperature"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
            <ImageView
                android:id="@+id/tv_rennes_cn"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_weight="1" />
        </TableRow>
        <TableRow android:background="@color/purple_200" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Paris" />
            <TextView
                android:id="@+id/tv_paris_teperature"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
            <ImageView
                android:id="@+id/tv_paris_cn"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

        </TableRow>
        <TableRow android:background="@color/purple_200" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nantes" />
            <TextView
                android:id="@+id/tv_nantes_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/tv_nantes_cn"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow android:background="@color/purple_200" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="Bordeaux" />
            <TextView
                android:id="@+id/tv_brd_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/tv_brd_cn"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow android:background="@color/purple_200" android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Lyon" />
            <TextView
                android:id="@+id/tv_lyn_tempurateur"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <ImageView
                android:id="@+id/tv_lyn_cn"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_bottom"
        android:id="@+id/tv_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="end" />

    <Button
        android:visibility="gone"
        android:id="@+id/btn_restart"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textAllCaps="false"
        android:background="@drawable/button_background"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/progress_background" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/progress_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="0%"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_gravity="end" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>